Landing seccion principal terminada y segunda seccion empezada

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,3 @@
-
-
-
 <!-- Este sera el contenedor principal, el que aparece al cargar la página principal -->
 <div class="MainWrapper">
     <nav class="AppBar">
@@ -12,4 +9,27 @@
             <li>Discover</li>
         </ul>
     </nav>
+    <div class="AppContent">
+        <section class="AppContent__Item">
+            <div class="ShadowText">MUSIC</div>
+            <h1 class="Title--white">Sounds Better</h1>
+            <h2 class="Subtitle--orange">Sounds Louder</h2>
+            <p class="LoudifyDescription">
+                Prepare for a list of incredible music with Loudify Get newest tracks
+                and follow the creations of your favorite artist.
+            </p>
+            <div class="ShadowText__Bottom">NOW</div>
+            <span class="BottomSubtitle--green">Turn Up The Speakers</span>
+        </section>
+        <div class="AppContent__Item SvgGreenBackground">
+            <img class="Image SpeakerImage" src="assets/images/top50.png" alt="Speaker">
+        </div>
+    </div>
+</div>
+<div class="SecondWrapper">
+    <div class="BannerWrapper">
+        <div class="Banner primary">
+            <h1>ELECTRONIC DANCE MUSIC</h1>
+        </div>
+    </div>
 </div>
