--- a/src/variables.sass
+++ b/src/variables.sass
@@ -8,3 +8,7 @@ $tertiary: rgba(255,181,0,1)
 
 
 $wrapper-main-padding: 48px 50px
+$shadow-text-size: 112px
+$shadow-text-size-bottom: 110px
+$title-white-font-size: 80px
+$subtitle-orange-font-size: 65px
