--- a/src/styles.sass
+++ b/src/styles.sass
@@ -7,12 +7,16 @@ body
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
     font-weight: 400
 
+    max-width: 100% 
+
+
 *
   box-sizing: border-box
     
 html
   -ms-text-size-adjust: 100% //2
   -webkit-text-size-adjust: 100% //2
+  max-width: 100%
 /* HTML5 display definitions
    ========================================================================== */
 article, aside, details, figcaption, figure, footer, header, main, menu, nav, section, summary
