Landing footer semicompleto

--- a/src/variables.sass
+++ b/src/variables.sass
@@ -10,5 +10,10 @@ $tertiary: rgba(255,181,0,1)
 $wrapper-main-padding: 48px 50px
 $shadow-text-size: 112px
 $shadow-text-size-bottom: 110px
-$title-white-font-size: 80px
-$subtitle-orange-font-size: 65px
+$title-white-font-size: 65px
+$subtitle-orange-font-size: 90px
+
+
+
+$green-box-padding: 35px 65px
+$artist-name-font-size: 80px
