Landing terminado no responsive

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -108,6 +108,11 @@
                 </li>
             </ul>
         </div>
+        <div class="BannerWrapper">
+            <div class="Banner tertiary">
+                <h1>Loudify charlie</h1>
+            </div>
+        </div>
     </div>
 </div>
 <div class="WrapperFourth">
@@ -122,7 +127,7 @@
                 </h1>
                 <div class="Subtitle">DISCOVER NEW TRACKS EVERYDAY</div>
                 <div class="Content">
-                    Loudify look for the top charts rin a lot of rankings, including  spotify and deezer. 
+                    Loudify look for the top charts rin a lot of rankings, including  spotify and deezer.
                     The top artist will appear in the landing page so you can play their songs just with a click
                 </div>
             </section>
@@ -133,13 +138,26 @@
     </div>
 </div>
 <footer class="AppFooter">
-    <div class="AppName">
-        Loudify.
+    <div class="Column">
+        <div class="AppName">
+            Loudify.
+        </div>
+        <ul class="FooterList">
+            <li>Top charts songs for you</li>
+            <li>Global Charts</li>
+            <li>My Account</li>
+            <li>Translate</li>
+        </ul>
     </div>
-    <ul class="FooterList">
-        <li>Top charts songs for you</li>
-        <li>Global Charts</li>
-        <li>My Account</li>
-        <li>Translate</li>
-    </ul>
+    <div class="Column">
+        <div class="BannerWrapper">
+            <div class="Banner primary">
+                <h1>Subscribe to News</h1>
+            </div>
+
+        </div>
+        <div class="Copyright">Copyright rmacuna</div>
+
+    </div>
+
 </footer>
