Inicialiazo test de perfomance , hay que crear el algoritmo que saque el dispositivo en donde se esta realizando la prueba , asi como crear una tabla de 1000x1000 al momento de hacer click al boton de iniciar, luego calcular el tiempo

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
         <ul class="Loudify__Navigation">
             <li class="active">Home</li>
             <li>Sounds</li>
-            <li>Perfomance</li>
+            <li [routerLink]="['/perfomanceTest']" routerLinkActive="router-link-active" >Perfomance</li>
             <li>Discover</li>
         </ul>
     </nav>
