--- a/src/app/perfomance/perfomance.component.sass
+++ b/src/app/perfomance/perfomance.component.sass
@@ -49,13 +49,72 @@
     position: relative
     width: 100%
     min-height: 100vh 
-    .container__pefomance 
+    .container__perfomance 
         position: relative
         width: 100%
         min-height: 100% 
+        overflow-x: auto
+        overflow-y: scroll
         padding: 50px 48px 
 
 .hidden 
     display: none
 .show 
     display: block    
+
+.pointer 
+    cursor: pointer
+
+table.blueTable 
+  border: 1px solid #818181
+  width: 100%
+  text-align: center
+  border-collapse: collapse
+
+table.blueTable td, table.blueTable th 
+  border: 1px solid #000000
+  padding: 10px 10px
+
+table.blueTable tbody td 
+  font-size: 15px
+
+table.blueTable tr:nth-child(even) 
+  background: #FFFFFF
+
+table.blueTable td:nth-child(even) 
+  background: #FFFFFF
+
+table.blueTable thead 
+  background: #FFFFFF
+  background: -moz-linear-gradient(top, #ffffff 0%, #ffffff 66%, #FFFFFF 100%)
+  background: -webkit-linear-gradient(top, #ffffff 0%, #ffffff 66%, #FFFFFF 100%)
+  background: linear-gradient(to bottom, #ffffff 0%, #ffffff 66%, #FFFFFF 100%)
+
+table.blueTable thead th 
+  font-size: 15px
+  font-weight: bold
+  color: #000000
+  text-align: center
+
+table.blueTable tfoot 
+  font-size: 15px
+  font-weight: bold
+  color: #FFFFFF
+  background: #F3F5EF
+  background: -moz-linear-gradient(top, #f6f7f3 0%, #f4f6f0 66%, #F3F5EF 100%)
+  background: -webkit-linear-gradient(top, #f6f7f3 0%, #f4f6f0 66%, #F3F5EF 100%)
+  background: linear-gradient(to bottom, #f6f7f3 0%, #f4f6f0 66%, #F3F5EF 100%)
+  border-top: 2px solid #E4E4E4
+
+table.blueTable tfoot td 
+  font-size: 15px
+
+table.blueTable tfoot .links 
+  text-align: right
+
+table.blueTable tfoot .links a
+  display: inline-block
+  background: #41A436
+  color: #FFFFFF
+  padding: 2px 8px
+  border-radius: 5px
