Test de pintar una tabla completado

--- a/src/app/perfomance/perfomance.component.sass
+++ b/src/app/perfomance/perfomance.component.sass
@@ -78,11 +78,6 @@ table.blueTable td, table.blueTable th
 table.blueTable tbody td 
   font-size: 15px
 
-table.blueTable tr:nth-child(even) 
-  background: #FFFFFF
-
-table.blueTable td:nth-child(even) 
-  background: #FFFFFF
 
 table.blueTable thead 
   background: #FFFFFF
@@ -118,3 +113,7 @@ table.blueTable tfoot .links a
   color: #FFFFFF
   padding: 2px 8px
   border-radius: 5px
+
+
+td.cell-active
+  background: lighten(#41A436, 10) 
