--- a/src/app/perfomance/perfomance.component.html
+++ b/src/app/perfomance/perfomance.component.html
@@ -7,8 +7,12 @@
 </div>
 
 <div #target class="perfomance_section hidden">
-
   <div class="container__perfomance">
+    <button (click)="paintAllCells()">Paint all cells</button>
+    <button (click)="removeCells()">Remove 100 cells</button>
+    <button (click)="addNewCells()">Add 100 cells</button>
+    <button (click)="updateCells()">Update 100 cells</button>
+
     <div class="information">
       <h4>
         Browser Information
@@ -27,9 +31,9 @@
       <thead>
         <th *ngFor="let item of INFORMATION" >Row</th>
       </thead>
-      <tbody>
+      <tbody #bodyTable>
         <tr *ngFor="let item of INFORMATION" >
-          <td class="pointer" *ngFor="let item of INFORMATION">item</td>
+          <td class="pointer" (click)="activeCell($event)"  *ngFor="let item of INFORMATION"></td>
         </tr>
       </tbody>
 
