--- a/src/app/perfomance/perfomance.component.sass
+++ b/src/app/perfomance/perfomance.component.sass
@@ -23,6 +23,31 @@
     @media screen and (max-width: 991px)
         font-size: 45px
 
+
+.buttons-actions 
+  position: relative
+  background: #2D1555
+  color: #fff 
+  outline: none 
+  border: none
+  
+  cursor: pointer
+
+  border-radius: 6px
+  padding: 10px 12px 
+  margin: 0 2px
+  display: inline-block
+
+  font-weight: 600
+  font-size: 14px
+
+  transition: background 0.3s cubic-bezier(0.39, 0.58, 0.57, 1)
+
+  &:hover 
+    background: darken(#2D1555, 2)
+
+  
+
 .InitButton
     position: relative
     outline: none
