--- a/src/app/perfomance/perfomance.component.sass
+++ b/src/app/perfomance/perfomance.component.sass
@@ -26,15 +26,16 @@
 
 .buttons-actions 
   position: relative
-  background: #2D1555
-  color: #fff 
+  background: #fff
+  color: #FF6597 
   outline: none 
   border: none
   
   cursor: pointer
 
   border-radius: 6px
-  padding: 10px 12px 
+  padding: 12px 12px 
+
   margin: 0 2px
   display: inline-block
 
@@ -142,3 +143,33 @@ table.blueTable tfoot .links a
 
 td.cell-active
   background: lighten(#41A436, 10) 
+
+
+.container_actions
+  position: relative
+  width: 100%
+  padding: 25px 25px
+  min-height: 200px
+  padding-left: 68px
+  background: #4700BB
+  background-image: linear-gradient(32deg, rgba(72,44,105,0.50) 0%, rgba(48,7,167,0.50) 83%)
+  box-shadow: 0 2px 40px 0 rgba(0,0,0,0.50)
+  border-radius: 20px  
+  .Operation
+    color: #65FFBB
+    margin: 0
+  .Action__Items
+    margin-top: 40px
+    position: relative
+    width: 100% 
+    display: flex 
+    height: auto
+
+.container_table 
+  position: relative
+  padding-top: 25px
+  width: 100% 
+  overflow: scroll
+  min-height: 500px
+
+  
