--- a/src/app/perfomance/perfomance.component.sass
+++ b/src/app/perfomance/perfomance.component.sass
@@ -215,7 +215,7 @@ section.NavyCard
 
   h3.subtitle 
     position: relative
-    color: rgba(18,0,69, .53 )
+    color: rgba(18,0,69, .53)
     margin: 0
     font-size: 20px
   h1.title 
@@ -246,3 +246,11 @@ section.NavyCard
     padding: 22px 23px 
     box-shadow: 0 4px 10px  rgba(6,0,98,.19)
     border-radius: 12px
+    h1 
+      font-size: 24px
+      color: #DA5700
+    p 
+      position: relative
+      font-size: 14px
+      color: rgba(0,0,0,.67)
+      font-weight: 600
